force-app/main/default/objects/Friends__c/Friends__c.object-meta.xml
<CustomObject>
    <label>friend</label>
    <nameField>
        <label>Friends Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>friends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>