force-app/main/default/objects/Friends__c/fields/Enter_Address__c.field-meta.xml
<CustomField>
    <fullName>Enter_Address__c</fullName>
    <description>Please enter Your Address</description>
    <label>Enter Address</label>
    <length>10</length>
    <type>Text</type>
</CustomField>