force-app/main/default/objects/Friends__c/fields/Enter_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Enter_Phone_Number__c</fullName>
    <description>Please Enter Phone Number</description>
    <label>Enter Phone Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>