force-app/main/default/objects/Friends__c/fields/Frienship_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Frienship_Ending_Date__c</fullName>
    <label>Frienship Ending Date</label>
    <type>Date</type>
</CustomField>