force-app/main/default/objects/Friends__c/fields/frienship_Starting_Dtae__c.field-meta.xml
<CustomField>
    <fullName>frienship_Starting_Dtae__c</fullName>
    <description>it will show thw starting date</description>
    <label>frienship Starting Dtae</label>
    <type>Date</type>
</CustomField>