force-app/main/default/objects/Friends__c/fields/Message_List__c.field-meta.xml
<CustomField>
    <fullName>Message_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Message List</label>
    <referenceTo>Chat__c</referenceTo>
    <relationshipLabel>Friends</relationshipLabel>
    <relationshipName>Friends</relationshipName>
    <type>Lookup</type>
</CustomField>